// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Recombee's deleteCartAddition destination action: all fields 1`] = `
Object {
  "itemId": "IvOr9H3r",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "userId": "IvOr9H3r",
}
`;

exports[`Testing snapshot for Recombee's deleteCartAddition destination action: required fields 1`] = `
Object {
  "itemId": "IvOr9H3r",
  "userId": "IvOr9H3r",
}
`;
